AWS sdk V2 update